# CNN_CLASH

./: .gitignore  CNN_train.ipynb  README.md  model.py  preprocess.py  pyproject.toml  second_CNN_train.ipynb  train.py
CANDELS/: config.json
CANDELS/stamps/: GDS_deep2_10000.fits  GDS_deep2_10006.fits  GDS_deep2_10010.fits  GDS_deep2_10016.fits  GDS_deep2_10018.fits  GDS_deep2_10021.fits  GDS_deep2_10024.fits  GDS_deep2_10027.fits  GDS_deep2_10035.fits  GDS_deep2_10039.fits  GDS_deep2_10042.fits  GDS_deep2_10043.fits  GDS_deep2_10051.fits  GDS_deep2_10061.fits  GDS_deep2_10064.fits  GDS_deep2_10071.fits  GDS_deep2_10072.fits  GDS_deep2_10075.fits  GDS_deep2_10080.fits  GDS_deep2_10082.fits  GDS_deep2_10083.fits  GDS_deep2_10084.fits  GDS_deep2_10085.fits  GDS_deep2_10087.fits  GDS_deep2_10088.fits  GDS_deep2_10090.fits  GDS_deep2_10096.fits  GDS_deep2_10098.fits  GDS_deep2_10100.fits  GDS_deep2_10101.fits  GDS_deep2_10105.fits  GDS_deep2_10110.fits  GDS_deep2_10115.fits  GDS_deep2_10120.fits  GDS_deep2_10127.fits  GDS_deep2_10133.fits  GDS_deep2_10134.fits  GDS_deep2_10135.fits  GDS_deep2_10138.fits  GDS_deep2_10139.fits  (+7326 more)
images_preprocess/: GDS_deep2_10000_preprocess.fits  GDS_deep2_10006_preprocess.fits  GDS_deep2_10010_preprocess.fits  GDS_deep2_10016_preprocess.fits  GDS_deep2_10018_preprocess.fits  GDS_deep2_10021_preprocess.fits  GDS_deep2_10024_preprocess.fits  GDS_deep2_10027_preprocess.fits  GDS_deep2_10035_preprocess.fits  GDS_deep2_10039_preprocess.fits
